--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "interview",
+  "name": "500tech-interview",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "font-awesome": "^4.7.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.3"
   },
-  "devDependencies": {
-    "react-scripts": "4.0.3"
-  },
+
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
